// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Correctly - Logged In 1`] = `
<section
  class="flex flex-col items-center justify-between col-span-2 pt-5 text-center bg-white shadow-md rounded-shape-xl"
>
  <div
    class="flex-grow w-full px-5 my-auto md:px-6 lg:px-8"
  >
    <router-link-stub
      class="text-xs font-bold leading-tight tracking-widest uppercase sm:tracking-wider sm:text-sm font-heading text-main-700"
      to="/leagues/undefined"
    >
      
      
    
    </router-link-stub>
     
    <h2
      class="mt-2 mb-1 text-3xl font-bold leading-tight tracking-tight text-gray-900 font-heading"
    >
      
      Test Event
    
    </h2>
     
    <h4
      class="mt-1 text-lg text-gray-600 font-heading last:mb-4 md:mt-0"
    >
      <span
        class="leading-4"
      >
        
        01/01/2001
      
      </span>
       
      <span
        class="hidden mx-1 md:inline-block"
      >
        -
      </span>
       
      <span
        class="block text-base leading-tight md:inline-block md:text-lg"
      >
        
        Organised By John Doe
      
      </span>
    </h4>
     
    <div
      class="mt-2 mb-4 text-base leading-snug"
    >
      <p
        class="mb-1 text-gray-500 break-words"
      >
        
        Text
      
      </p>
       
      <p
        class="text-gray-500"
      >
        
        More Information can be found on the
        
        <a
          class="link text-main-700"
          href="http://example.com"
          rel="noopener noreferrer"
          target="_blank"
        >
          event website
        </a>
      </p>
    </div>
     
    <div
      class="w-full pb-5 mt-3"
    >
      <router-link-stub
        class="button"
        to="/events/undefined/results"
      >
        Results
      </router-link-stub>
       
      <a
        class="button"
        href="http://results"
        rel="noopener noreferrer"
        target="_blank"
      >
        Raw Results
      </a>
       
      <a
        class="button"
        href="http://winsplits"
        rel="noopener noreferrer"
        target="_blank"
      >
        WinSplits
      </a>
       
      <a
        class="button"
        href="http://routegadget"
        rel="noopener noreferrer"
        target="_blank"
      >
        Routegadget
      </a>
    </div>
  </div>
   
  <div
    class="w-full px-4 pt-4 pb-4 mt-2 bg-main-50 md:px-6 rounded-shape-xl"
  >
    <div
      class="mb-2"
    >
      <p
        class="mx-2"
      >
        <b
          class="mr-1 select-none text-main-800"
        >
          Event ID:
        </b>
        
        
      
      </p>
       
      <!---->
    </div>
     
    <router-link-stub
      class="button button-dark"
      to="/events/undefined/edit"
    >
      Edit Event
    </router-link-stub>
     
    <router-link-stub
      class="button button-dark"
      to="/upload/undefined"
    >
      Upload Results
    </router-link-stub>
     
    <button
      class="button button-dark"
    >
      
      Delete Event
    
    </button>
  </div>
</section>
`;

exports[`Renders Correctly - Normal View 1`] = `
<section
  class="flex flex-col items-center justify-between col-span-2 pt-5 text-center bg-white shadow-md rounded-shape-xl"
>
  <div
    class="flex-grow w-full px-5 my-auto md:px-6 lg:px-8"
  >
    <!---->
     
    <h2
      class="mt-2 mb-1 text-3xl font-bold leading-tight tracking-tight text-gray-900 font-heading"
    >
      
      Test Event
    
    </h2>
     
    <h4
      class="mt-1 text-lg text-gray-600 font-heading last:mb-4 md:mt-0"
    >
      <span
        class="leading-4"
      >
        
        01/01/2001
      
      </span>
       
      <span
        class="hidden mx-1 md:inline-block"
      >
        -
      </span>
       
      <span
        class="block text-base leading-tight md:inline-block md:text-lg"
      >
        
        Organised By John Doe
      
      </span>
    </h4>
     
    <div
      class="mt-2 mb-4 text-base leading-snug"
    >
      <p
        class="mb-1 text-gray-500 break-words"
      >
        
        Text
      
      </p>
       
      <p
        class="text-gray-500"
      >
        
        More Information can be found on the
        
        <a
          class="link text-main-700"
          href="http://example.com"
          rel="noopener noreferrer"
          target="_blank"
        >
          event website
        </a>
      </p>
    </div>
     
    <div
      class="w-full pb-5 mt-3"
    >
      <router-link-stub
        class="button"
        to="/events/undefined/results"
      >
        Results
      </router-link-stub>
       
      <a
        class="button"
        href="http://results"
        rel="noopener noreferrer"
        target="_blank"
      >
        Raw Results
      </a>
       
      <a
        class="button"
        href="http://winsplits"
        rel="noopener noreferrer"
        target="_blank"
      >
        WinSplits
      </a>
       
      <a
        class="button"
        href="http://routegadget"
        rel="noopener noreferrer"
        target="_blank"
      >
        Routegadget
      </a>
    </div>
  </div>
   
  <!---->
</section>
`;

exports[`Renders Correctly - Show League Title 1`] = `
<section
  class="flex flex-col items-center justify-between col-span-2 pt-5 text-center bg-white shadow-md rounded-shape-xl"
>
  <div
    class="flex-grow w-full px-5 my-auto md:px-6 lg:px-8"
  >
    <router-link-stub
      class="text-xs font-bold leading-tight tracking-widest uppercase sm:tracking-wider sm:text-sm font-heading text-main-700"
      to="/leagues/undefined"
    >
      
      
    
    </router-link-stub>
     
    <h2
      class="mt-2 mb-1 text-3xl font-bold leading-tight tracking-tight text-gray-900 font-heading"
    >
      
      Test Event
    
    </h2>
     
    <h4
      class="mt-1 text-lg text-gray-600 font-heading last:mb-4 md:mt-0"
    >
      <span
        class="leading-4"
      >
        
        01/01/2001
      
      </span>
       
      <span
        class="hidden mx-1 md:inline-block"
      >
        -
      </span>
       
      <span
        class="block text-base leading-tight md:inline-block md:text-lg"
      >
        
        Organised By John Doe
      
      </span>
    </h4>
     
    <div
      class="mt-2 mb-4 text-base leading-snug"
    >
      <p
        class="mb-1 text-gray-500 break-words"
      >
        
        Text
      
      </p>
       
      <p
        class="text-gray-500"
      >
        
        More Information can be found on the
        
        <a
          class="link text-main-700"
          href="http://example.com"
          rel="noopener noreferrer"
          target="_blank"
        >
          event website
        </a>
      </p>
    </div>
     
    <div
      class="w-full pb-5 mt-3"
    >
      <router-link-stub
        class="button"
        to="/events/undefined/results"
      >
        Results
      </router-link-stub>
       
      <a
        class="button"
        href="http://results"
        rel="noopener noreferrer"
        target="_blank"
      >
        Raw Results
      </a>
       
      <a
        class="button"
        href="http://winsplits"
        rel="noopener noreferrer"
        target="_blank"
      >
        WinSplits
      </a>
       
      <a
        class="button"
        href="http://routegadget"
        rel="noopener noreferrer"
        target="_blank"
      >
        Routegadget
      </a>
    </div>
  </div>
   
  <!---->
</section>
`;
